# StudyForge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 20938c4be791_create_summaries_table.py  50516f7fc523_create_flashcards_table.py  7987b7f9201d_create_users_table.py  85a61ba49e13_create_quiz_attempts_table.py  94da57ae2f3f_create_users_table.py
api/: .env.example  README.md  docker-compose.test.yml  dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 18061415cd36_create_users_and_subjects_tables.py  42eb81e82a71_create_materials_table.py  85a61ba49e13_create_quiz_attempts_table.py  9bfe44f833e7_create_quizzes_tables.py
api/app/: main.py
api/app/core/: config.py  database.py  security.py
api/tests/: conftest.py  test_api_integration.py
app/: main.py
app/core/: config.py
app/modules/ai/: provider.py  router.py  schemas.py  service.py
app/modules/analytics/: router.py  schemas.py  service.py
app/modules/auth/: dependencies.py  router.py  service.py
app/modules/flashcards/: schemas.py
app/modules/materials/: router.py  service.py
app/modules/quizzes/: models.py  router.py  schemas.py  service.py
app/modules/subjects/: models.py  router.py  schemas.py  service.py
app/shared/: text_extractor.py
tests/: test_api_integration.py  test_text_extractor.py
web/: README.md  next.config.ts  package-lock.json  package.json
web/studyforge-web/: package-lock.json  package.json
(+50 files in other folders)
